--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /node_modules
 /build
 
+hcc.sqlite
+
 # Logs
 logs
 *.log
@@ -56,3 +58,5 @@ pids
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 .prettierrc
+
+
